--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Real-Time Audio Transcription",
-  "version": "3.0.0",
-  "description": "Advanced Chrome extension for real-time audio transcription",
+  "version": "1.0.0",
+  "description": "Chrome extension for real-time audio transcription from browser tabs",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
@@ -15,11 +15,18 @@
     "activeTab",
     "sidePanel",
     "offscreen",
-    "storage",
-    "scripting"
+    "storage"
   ],
   "host_permissions": [
-    "<all_urls>"
+    "https://generativelanguage.googleapis.com/*"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "offscreen.html"
+      ],
+      "matches": ["<all_urls>"]
+    }
   ],
   "background": {
     "service_worker": "background.js"
@@ -36,11 +43,13 @@
       "128": "icons/icon128.png"
     }
   },
-  "web_accessible_resources": [
-    {
-      "resources": ["offscreen.html", "offscreen.js"],
-      "matches": ["<all_urls>"]
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+T",
+        "mac": "Command+Shift+T"
+      },
+      "description": "Open Real-Time Audio Transcription Sidepanel"
     }
-  ]
+  }
 }
-  
